--- a/pricing-table/src/App.css
+++ b/pricing-table/src/App.css
@@ -1,8 +1,4 @@
 
-body{
-     background-color: "blue",
-}
-
 
  .month{
      font-size: 0.8rem;
@@ -28,6 +24,17 @@ body{
      text-transform:uppercase;
    }
 
-   span{
-        margin-right: 10px;
-   }
+  .btnStyle {
+    border-radius: 5rem;
+    margin: 5px 25px;
+    width: 320px;
+    height: 50px;
+    font-size: 0.9rem;
+    font-weight: bold;
+    letter-spacing: .3rem;
+    padding: 1rem;
+    opacity: 0.7;
+    transition: all 0.2s;
+  };
+
+  
